<resources>

    <string name="app_name">Tander</string>
	<string name="hello_world">Hello world!</string>    
	<string name="action_settings">Settings</string>    
	<string name="string_enter_name">Enter your name</string>    
	<string name="string_choose_username">Choose your username</string>    
	<string name="string_choose_password">Choose your password</string>    
	<string name="string_enter_email">Enter your email</string>
	<string name="string_not_registered">If you are not registered go to registration.</string> 
	<string name="string_username">Enter Username</string>  
	<string name="string_password">Enter Password</string>  
	<string name="button_register">Register</string>
	<string name="button_go_to_register">Go to registration</string>
	<string name="button_login">Login</string>
	<string name="button_Find_Tander_Friend">Find Tander Friend</string>
	<string name="button_View_Tander_Friend">View Tander Friend List</string>
	
	<string name="type_msg">Type message</string>    
    
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
    
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
	<string name="alert_loading">Loading...</string>
	<string name="msg_no_user_found">No users found for chat!</string>
	
</resources>
